bdr.BDR.scala.error
Erreur de compilation :
BDR:16: error: ')' expected but '=' found.
      avance(nbPas:Int =2)
                       ^BDR:18: error: ')' expected but '=' found.
      avance(nbPas:Int = 3)
                       ^BDR:22: error: ')' expected but '=' found.
      recule(nbPas:Int = 2)
                       ^BDR:24: error: ')' expected but '=' found.
      recule(nbPas:Int = 3)
                       ^